--- a/src/fileserver/ServerForm.form
+++ b/src/fileserver/ServerForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.8" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -117,7 +117,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtCaminho">
       <Properties>
-        <Property name="text" type="java.lang.String" value="/home/marcio/Documentos/"/>
+        <Property name="text" type="java.lang.String" value="C:\u005cUsers\u005cALUNO\u005cDownloads" containsInvalidXMLChars="true"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtCaminhoActionPerformed"/>
